# klepto-swiftpm

./: CONTRIBUTING.md  Package.swift
Sources/: CMakeLists.txt
Sources/Commands/: CMakeLists.txt  Options.swift  SwiftPackageTool.swift  SwiftRunTool.swift  SwiftTool.swift
Sources/Klepto/: CMakeLists.txt  Klepto.swift
Sources/PackageDescription/: Product.swift
Sources/PackageGraph/: PackageGraph+Loading.swift
Sources/PackageGraph/Pubgrub/: PubgrubDependencyResolver.swift
Sources/PackageLoading/: Diagnostics.swift  PackageBuilder.swift  PackageDescription4Loader.swift
Sources/PackageModel/: ManifestSourceGeneration.swift  Product.swift
Sources/SPMBuildCore/: BuildParameters.swift  Toolchain.swift
Sources/Workspace/: CMakeLists.txt  Destination.swift  InitPackage.swift  UserToolchain.swift  Workspace.swift
Sources/XCBuildSupport/: PIFBuilder.swift
Sources/Xcodeproj/: CMakeLists.txt
Tests/PackageGraphTests/: PubgrubTests.swift
lib/swift/pm/4/: PackageDescription.swiftdoc  PackageDescription.swiftmodule
lib/swift/pm/4_2/: PackageDescription.swiftdoc  PackageDescription.swiftmodule
